--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,67 @@
 }
 
 
+
+@article{halpern2012,
+	title = {An index to assess the health and benefits of the global ocean},
+	author = {Halpern, Benjamin S. and Longo, Catherine and Hardy, Darren and McLeod, Karen L. and Samhouri, Jameal F. and Katona, Steven K. and Kleisner, Kristin and Lester, Sarah E. and {O{\textquoteright}Leary}, Jennifer and Ranelletti, Marla and Rosenberg, Andrew A. and Scarborough, Courtney and Selig, Elizabeth R. and Best, Benjamin D. and Brumbaugh, Daniel R. and Chapin, F. Stuart and Crowder, Larry B. and Daly, Kendra L. and Doney, Scott C. and Elfes, Cristiane and Fogarty, Michael J. and Gaines, Steven D. and Jacobsen, Kelsey I. and Karrer, Leah Bunce and Leslie, Heather M. and Neeley, Elizabeth and Pauly, Daniel and Polasky, Stephen and Ris, Bud and Martin, Kevin St and Stone, Gregory S. and Sumaila, U. Rashid and Zeller, Dirk},
+	year = {2012},
+	date = {2012},
+	journal = {Nature},
+	doi = {10.1038/nature11397},
+	url = {http://www.nature.com/nature/journal/vaop/ncurrent/full/nature11397.html},
+	langid = {en}
+}
+
+@article{visalli2020,
+	title = {Data-driven approach for highlighting priority areas for protection in marine areas beyond national jurisdiction},
+	author = {Visalli, Morgan E. and Best, Benjamin D. and Cabral, Reniel B. and Cheung, William W. L. and Clark, Nichola A. and Garilao, Cristina and Kaschner, Kristin and Kesner-Reyes, Kathleen and Lam, Vicky W. Y. and Maxwell, Sara M. and Mayorga, Juan and Moeller, Holly V. and Morgan, Lance and Crespo, {Guillermo Ortuño} and Pinsky, Malin L. and White, Timothy D. and McCauley, Douglas J.},
+	year = {2020},
+	month = {03},
+	date = {2020-03-28},
+	journal = {Marine Policy},
+	pages = {103927},
+	doi = {10.1016/j.marpol.2020.103927},
+	url = {http://www.sciencedirect.com/science/article/pii/S0308597X19309194},
+	langid = {en}
+}
+
+@article{tittensor2010,
+	title = {Global patterns and predictors of marine biodiversity across taxa},
+	author = {Tittensor, Derek P. and Mora, Camilo and Jetz, Walter and Lotze, Heike K. and Ricard, Daniel and Berghe, Edward Vanden and Worm, Boris},
+	year = {2010},
+	date = {2010},
+	journal = {Nature},
+	pages = {1098--1101},
+	volume = {466},
+	number = {7310},
+	doi = {10.1038/nature09329},
+	url = {http://dx.doi.org/10.1038/nature09329}
+}
+
+@article{kaschner2006,
+	title = {Mapping world-wide distributions of marine mammal species using a relative environmental suitability (RES) model},
+	author = {Kaschner, K. and Watson, R. and Trites, A. W. and Pauly, D.},
+	year = {2006},
+	month = {07},
+	date = {2006-07-03},
+	journal = {Marine Ecology Progress Series},
+	pages = {285--310},
+	volume = {316},
+	doi = {10.3354/meps316285},
+	url = {http://www.int-res.com/abstracts/meps/v316/p285-310/}
+}
+
+@article{ready2010,
+	title = {Predicting the distributions of marine organisms at the global scale},
+	author = {Ready, Jonathan and Kaschner, Kristin and South, Andy B. and Eastwood, Paul D. and Rees, Tony and Rius, Josephine and Agbayani, Eli and Kullander, Sven and Froese, Rainer},
+	year = {2010},
+	month = {02},
+	date = {2010-02-10},
+	journal = {Ecological Modelling},
+	pages = {467--478},
+	volume = {221},
+	number = {3},
+	doi = {10.1016/j.ecolmodel.2009.10.025},
+	url = {http://www.sciencedirect.com/science/article/B6VBS-4XSCVHM-1/2/c8c322a135ca495968b2e0ae2d2b1a4c}
+}
