--- a/references.bib
+++ b/references.bib
@@ -15,6 +15,84 @@
   pages = {97–111},
   numpages = {15}
 }
+@article{callejasGEEToolkitWater2022,
+  title = {A {{GEE}} Toolkit for Water Quality Monitoring from 2002 to 2022 in Support of {{SDG}} 14 and Coral Health in Marine Protected Areas in {{Belize}}},
+  author = {Callejas, Ileana A. and Osborn, Katie and Lee, Christine and Mishra, Deepak R. and Auil Gomez, Nicole and Carrias, Abel and Cherrington, Emil A. and Griffin, Robert and Rosado, Andria and Rosado, Samir and Jay, Jennifer},
+  year = {2022},
+  month = nov,
+  journal = {Frontiers in Remote Sensing},
+  volume = {3},
+  pages = {1020184},
+  issn = {2673-6187},
+  doi = {10.3389/frsen.2022.1020184},
+  urldate = {2023-11-15},
+  abstract = {Coral reefs are highly diverse ecosystems that provide many goods and ecosystem services globally. Coral reef ecosystems are also threatened by environmental stressors from anthropogenic sources and shifting climates. The United Nations Sustainable Development Goal 14 (``Life Below Water'') addresses the need to conserve and sustainably use the ocean, seas, and marine ecosystems, including reef systems. Belize's coral reef system is the second largest in the world, providing sources of income to Belizeans through tourism and fisheries as well as coastline protection. In order to conserve their marine ecosystems, Belize has a network of Marine Protected Areas (MPAs) throughout their coastal waters. Using Aqua MODIS satellite imagery from 2002 to 2022, Google Earth Engine, and RStudio, we present a workflow to calculate stress days on MPAs and a coral vulnerability index based on sea surface temperature (SST) and Kd (490), a proxy of water clarity. The Corozal Bay, Swallow Caye, Port Honduras, and South Water Caye MPAs had the highest percentages of stress days and coral vulnerability stress index score based on these two parameters among the 24 MPAs analyzed. Additionally, SST in the warmest month of the year in Belize were seen to increase across all MPAs from 2002 to 2022 (               p               \&lt; 0.01). This GEE toolkit provides a straightforward and accessible tool to help governments monitor both water quality and risks to coral reefs in accordance with SDG 14.},
+  langid = {english},
+  file = {/Users/bbest/Zotero/storage/C63GLN3B/Callejas et al. - 2022 - A GEE toolkit for water quality monitoring from 20.pdf}
+}
+
+@article{camposEcologicalNicheModels2023,
+  title = {Ecological {{Niche Models}} Using {{MaxEnt}} in {{Google Earth Engine}}: {{Evaluation}}, Guidelines and Recommendations},
+  shorttitle = {Ecological {{Niche Models}} Using {{MaxEnt}} in {{Google Earth Engine}}},
+  author = {Campos, Jo{\~a}o C. and Garcia, Nuno and Al{\'i}rio, Jo{\~a}o and {Arenas-Castro}, Salvador and Teodoro, Ana C. and Sillero, Neftal{\'i}},
+  year = {2023},
+  month = sep,
+  journal = {Ecological Informatics},
+  volume = {76},
+  pages = {102147},
+  issn = {15749541},
+  doi = {10.1016/j.ecoinf.2023.102147},
+  urldate = {2023-11-15},
+  abstract = {Google Earth Engine (GEE) has revolutionized geospatial analyses by fast-processing formerly demanding ana\- lyses from multiple research areas. Recently, maximum entropy (MaxEnt), the most commonly used method in ecological niche models (ENMs), was integrated into GEE. This integration can significantly enhance modeling efficiency and encourage multidisciplinary approaches of ENMs, but an evaluation assessment of MaxEnt in GEE is lacking. Herein, we present the first MaxEnt models in GEE, as well as its first statistical and spatial evaluation. We also identify the limitations of the approach, providing guidelines and recommendations for its easier applicability in GEE.},
+  langid = {english},
+  file = {/Users/bbest/Zotero/storage/42JFWS38/Campos et al. - 2023 - Appendix_E_SuppInfo.pdf;/Users/bbest/Zotero/storage/G9C596SM/Campos et al. - 2023 - Ecological Niche Models using MaxEnt in Google Ear.pdf}
+}
+
+@misc{kaschnerAquaMapsPredictedRange2023,
+  title = {{{AquaMaps}}: {{Predicted}} Range Maps for Aquatic Species. {{Retrieved}} from {{https://www.aquamaps.org.}}},
+  author = {Kaschner, K. and {Kesner-Reyes}, K. and Garilao, C. and Segschneider, J. and {Rius-Barile}, J. and Rees, T. and Froese, R.},
+  year = {2023}
+}
+
+@article{kaschnerMappingWorldwideDistributions2006,
+  title = {Mapping World-Wide Distributions of Marine Mammal Species Using a Relative Environmental Suitability ({{RES}}) Model},
+  author = {Kaschner, K. and Watson, R. and Trites, A. W. and Pauly, D.},
+  year = {2006},
+  month = jul,
+  journal = {Marine Ecology Progress Series},
+  volume = {316},
+  pages = {285--310},
+  doi = {10.3354/meps316285},
+  urldate = {2008-07-02},
+  abstract = {ABSTRACT: The lack of comprehensive sighting data sets precludes the application of standard habitat suitability modeling approaches to predict distributions of the majority of marine mammal species on very large scales. As an alternative, we developed an ecological niche model to map global distributions of 115 cetacean and pinniped species living in the marine environment using more readily available expert knowledge about habitat usage. We started by assigning each species to broad-scale niche categories with respect to depth, sea-surface temperature, and ice edge association based on synopses of published information. Within a global information system framework and a global grid of 0.5\textdegree{} latitude/longitude cell dimensions, we then generated an index of the relative environmental suitability (RES) of each cell for a given species by relating known habitat usage to local environmental conditions. RES predictions closely matched published maximum ranges for most species, thus representing useful, more objective alternatives to existing sketched distributional outlines. In addition, raster-based predictions provided detailed information about heterogeneous patterns of potentially suitable habitat for species throughout their range. We tested RES model outputs for 11 species (northern fur seal, harbor porpoise, sperm whale, killer whale, hourglass dolphin, fin whale, humpback whale, blue whale, Antarctic minke, and dwarf minke whales) from a broad taxonomic and geographic range, using data from dedicated surveys. Observed encounter rates and species-specific predicted environmental suitability were significantly and positively correlated for all but 1 species. In comparison, encounter rates were correlated with {$<$}1\% of 1000 simulated random data sets for all but 2 species. Mapping of large-scale marine mammal distributions using this environmental envelope model is helpful for evaluating current assumptions and knowledge about species' occurrences, especially for data-poor species. Moreover, RES modeling can help to focus research efforts on smaller geographic scales and usefully supplement other, statistical, habitat suitability models.},
+  keywords = {Distribution,GIS,Global,Habitat suitability modeling,Marine mammals,Niche model,Relative environ-mental suitability},
+  file = {/Users/bbest/Zotero/storage/85SLESM3/Kaschner et al. - 2006 - Mapping world-wide distributions of marine mammal .pdf;/Users/bbest/Zotero/storage/HC7LIEY6/Kaschner et al. - 2006 - Mapping world-wide distributions of marine mammal .pdf;/Users/bbest/Zotero/storage/IVUHBL2N/Kaschner2006.pdf;/Users/bbest/Zotero/storage/M569V2ZH/p285-310.html}
+}
+
+@article{readyPredictingDistributionsMarine2010,
+  title = {Predicting the Distributions of Marine Organisms at the Global Scale},
+  author = {Ready, Jonathan and Kaschner, Kristin and South, Andy B. and Eastwood, Paul D. and Rees, Tony and Rius, Josephine and Agbayani, Eli and Kullander, Sven and Froese, Rainer},
+  year = {2010},
+  month = feb,
+  journal = {Ecological Modelling},
+  volume = {221},
+  number = {3},
+  pages = {467--478},
+  issn = {0304-3800},
+  doi = {10.1016/j.ecolmodel.2009.10.025},
+  urldate = {2010-03-21},
+  abstract = {We present and evaluate AquaMaps, a presence-only species distribution modelling system that allows the incorporation of expert knowledge about habitat usage and was designed for maximum output of standardized species range maps at the global scale. In the marine environment there is a significant challenge to the production of range maps due to large biases in the amount and location of occurrence data for most species. AquaMaps is compared with traditional presence-only species distribution modelling methods to determine the quality of outputs under equivalently automated conditions. The effect of the inclusion of expert knowledge to AquaMaps is also investigated. Model outputs were tested internally, through data partitioning, and externally against independent survey data to determine the ability of models to predict presence versus absence. Models were also tested externally by assessing correlation with independent survey estimates of relative species abundance. AquaMaps outputs compare well to the existing methods tested, and inclusion of expert knowledge results in a general improvement in model outputs. The transparency, speed and adaptability of the AquaMaps system, as well as the existing online framework which allows expert review to compensate for sampling biases and thus improve model predictions are proposed as additional benefits for public and research use alike.},
+  keywords = {Expert review,Global marine biodiversity,Model comparison,Range maps,Species distribution modelling,Trawl surveys},
+  file = {/Users/bbest/Zotero/storage/5RNB5TQN/Ready et al. - 2010 - Predicting the distributions of marine organisms a.pdf;/Users/bbest/Zotero/storage/N2D6NNVI/science.html}
+}
+
+@article{aquamapsdata,
+	title = {aquamapsdata: Curated Data From AquaMaps.Org},
+	author = {Skyttner, Markus},
+	year = {2020},
+	date = {2020},
+	url = {https://github.com/raquamaps/aquamapsdata}
+}
 
 
 
