--- a/explorations/am-fine.qmd
+++ b/explorations/am-fine.qmd
@@ -1,5 +1,5 @@
 ---
-title: "AquaMaps Downscaled"
+pagetitle: "AquaMaps Downscaled"
 description: "AquaMaps downscaled from 1/2º to GEBCO 1/240º using Google Earth Engine and Shiny."
 image: "../figures/experiments/aquamaps-downscaled.png"
 format: 
@@ -10,5 +10,7 @@ categories:
    - "tech: Google Earth Engine"
    - "tech: Shiny"
 ---
+
+# AquaMaps Downscaled {.unnumbered}
 
 ![](/figures/experiments/aquamaps-downscaled.png)
