--- a/process.qmd
+++ b/process.qmd
@@ -1,4 +1,10 @@
 # Process
 
-TODO: Overview figure
+```{mermaid}
+%%| label: fig-process
+%%| fig-cap: "Diagram of SDM data preparation and model fitting."
+%%| file: diagrams/sdm-process.mmd
+```
+
+
 
