reinstall glossary from GH; quarto publish gh-pages # remotes::install_github("debruine/glossary") glossary::glossary_persistent(TRUE) # quarto publish gh-pages

--- a/glossary.qmd
+++ b/glossary.qmd
@@ -2,11 +2,8 @@
 title: "Glossary"
 ---
 
-
 ```{r}
 #| results="asis"
-
-glossary_table(as_kable=F) |> 
+glossary::glossary_table(as_kable=F) |> 
   knitr::kable("pipe", escape = F, row.names = F)
 ```
-
