--- a/explorations/am-envelope.qmd
+++ b/explorations/am-envelope.qmd
@@ -1,18 +1,15 @@
 ---
-description: "Downscale AquaMaps from 1/2º to GEBCO 1/240º using Google Earth Engine and Shiny."
-image: "../figures/experiments/aquamaps-downscaled.png"
-url: "https://shiny.marinebon.app/am-fine/"
-url-code: "https://github.com/marinebon/aquamaps-downscaled/tree/main/sp-map"
+description: "Extract and plot AquaMaps environmental envelope, ramp rasters, using R."
+image: "https://marinebon.github.io/aquamaps-downscaled/index_files/figure-html/fig-blue_whale_env_yes-1.png"
 format: 
   html: 
     toc: true
 categories: 
    - "data: AquaMaps"
-   - "tech: Google Earth Engine"
-   - "tech: Shiny"
+   - "tech: R"
 ---
 
-# AquaMaps Downscaled {.unnumbered}
+# AquaMaps Envelope {.unnumbered}
 
 ```{r}
 #| echo: false
