.Rprofile: install glossary if missing

--- a/index.qmd
+++ b/index.qmd
@@ -2,14 +2,16 @@
 
 ```{r}
 #| echo: false
+#| eval: false
 
 # in .Rprofile:
-# remotes::install_github("debruine/glossary")
+if (!"glossary" %in% rownames(installed.packages()))
+  remotes::install_github("debruine/glossary")
 library(glossary)
 glossary::glossary_path("glossary.yml")
 glossary::glossary_popup("click")
 glossary::glossary_persistent(TRUE)
-# quarto publish gh-pages
+# Terminal: quarto publish gh-pages
 ```
 
 ## Background
