--- a/references.bib
+++ b/references.bib
@@ -159,3 +159,66 @@
 	doi = {10.1016/j.ecolmodel.2009.10.025},
 	url = {http://www.sciencedirect.com/science/article/B6VBS-4XSCVHM-1/2/c8c322a135ca495968b2e0ae2d2b1a4c}
 }
+
+@article{elith2009,
+	title = {Species Distribution Models: Ecological Explanation and Prediction Across Space and Time},
+	author = {Elith, Jane and Leathwick, John R.},
+	year = {2009},
+	month = {12},
+	date = {2009-12},
+	journal = {Annual Review of Ecology, Evolution, and Systematics},
+	pages = {677--697},
+	volume = {40},
+	number = {1},
+	doi = {10.1146/annurev.ecolsys.110308.120159},
+	url = {http://arjournals.annualreviews.org/doi/abs/10.1146/annurev.ecolsys.110308.120159}
+}
+
+@article{gorelick2017,
+	title = {Google Earth Engine: Planetary-scale geospatial analysis for everyone},
+	author = {Gorelick, Noel and Hancher, Matt and Dixon, Mike and Ilyushchenko, Simon and Thau, David and Moore, Rebecca},
+	year = {2017},
+	month = {12},
+	date = {2017-12-01},
+	journal = {Remote Sensing of Environment},
+	pages = {18--27},
+	series = {Big Remotely Sensed Data: tools, applications and experiences},
+	volume = {202},
+	doi = {10.1016/j.rse.2017.06.031},
+	url = {http://www.sciencedirect.com/science/article/pii/S0034425717302900}
+}
+
+@article{elith2011,
+	title = {A statistical explanation of MaxEnt for ecologists},
+	author = {Elith, Jane and Phillips, Steven J. and Hastie, Trevor and {Dudík}, Miroslav and Chee, Yung En and Yates, Colin J.},
+	year = {2011},
+	date = {2011},
+	journal = {Diversity and Distributions},
+	pages = {43--57},
+	volume = {17},
+	number = {1},
+	url = {http://dx.doi.org/10.1111/j.1472-4642.2010.00725.x}
+}
+
+@article{klein2019,
+	title = {OBIS Infrastructure, Lessons Learned, and Vision for the Future},
+	author = {Klein, Eduardo and Appeltans, Ward and Provoost, Pieter and Saeedi, Hanieh and Benson, Abigail and Bajona, Lenore and Peralta, Ana Carolina and Bristol, R. Sky},
+	year = {2019},
+	date = {2019},
+	journal = {Frontiers in Marine Science},
+	volume = {6},
+	url = {https://www.frontiersin.org/articles/10.3389/fmars.2019.00588}
+}
+
+@article{grassle2000,
+	title = {The Ocean Biogeographic Information System (OBIS): an on-line, worldwide atlas for accessing, modeling and mapping marine biological data in a multidimensional geographic context},
+	author = {Grassle, J. Frederick},
+	year = {2000},
+	date = {2000},
+	journal = {Oceanography},
+	pages = {5--7},
+	volume = {13},
+	number = {3},
+	url = {https://www.jstor.org/stable/43924357},
+	note = {Publisher: Oceanography Society}
+}
