--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,11 @@
 
 # in .Rprofile:
 if (!"glossary" %in% rownames(installed.packages()))
-  remotes::install_github("debruine/glossary")
+  install.packages(
+    "glossary",
+    repos = c(
+      "https://debruine.r-universe.dev",
+      "https://cloud.r-project.org"))
 library(glossary)
 glossary::glossary_path("glossary.yml")
 glossary::glossary_popup("click")
