--- a/indicators.qmd
+++ b/indicators.qmd
@@ -7,11 +7,11 @@ title: "Indicators"
 Here are the classic diversity indices from the R package `vegan`:
 
 $$
-\begin{align*}
+\begin{aligned}
 H   &= - \sum_{i=1}^S p_i \log_b  p_i  &\text{Shannon-Weaver}  \\
 D_1 &= 1 - \sum_{i=1}^S p_i^2          &\text{Simpson}         \\
-D_2 &= \frac{1}{\sum_{i=1}^S p_i^2}    &\text{inverse Simpson} \\
-\end{align*}
+D_2 &= \frac{1}{\sum_{i=1}^S p_i^2}    &\text{inverse Simpson}
+\end{aligned}
 $$
 
 ## Endemism
