--- a/index.qmd
+++ b/index.qmd
@@ -80,6 +80,6 @@ We very much welcome your feedback, contributions and collaboration. Here are a 
 
 2.  Submit a [New Issue](https://github.com/marinebon/MarineSDMs/issues/new/choose) on Github.
 
-3.  Click on the "Edit this Page" in the upper right. If you have a Github account, then you can fork this repository from owner "marinebon" to your username, edit the page(s) and submit a pull request.
+3.  Click on the <i class="bi bi-github"></i> "Edit this Page" in the upper right. If you have a Github account, then you can fork this repository from owner "marinebon" to your username, edit the page(s) and submit a pull request.
 
-4.  If you are a regular contributor, you can be added to the collaborators of this repository to make push changes directly (without needing a pull request).
+4.  If you are a regular contributor, you can be added to the collaborators of this repository to push changes directly (without needing a pull request).
